--- a/src/components/comp.css
+++ b/src/components/comp.css
@@ -1,29 +1,28 @@
 @keyframes load{
     0% {
         opacity: 0%;
-        transform: translateY(-73px);
+        
 
     }
 
     20% {
         opacity: 0%;
-        transform: scale(0) rotate(500deg) translateY(-73px); 
+        transform: scale(0) rotate(500deg); 
     }
 
     60% {
         opacity: 100%;
-        transform: scale(1.1) rotate(-12deg) translateY(-73px);
+        transform: scale(1.1) rotate(-12deg);
     }
 }
 
 .box {
-    min-width: calc(480px * 1.2);
-    max-width: 60%;
-    min-height: calc(300px * 1.2);
-    max-height: 60%;
+    min-width: 45vw;
+    max-width: 60vw;
+    min-height: 45vh;
+    max-height: 60vh;
     background-color: white;
     padding: 30px;
-    transform: translateY(-73px);
 
     display: flex;
     align-items: center;
@@ -39,10 +38,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
-
-    height: 100vh;
-    width: 100vw;
+    height: calc(100vh - 73px);
 }
 
 .buttons {
@@ -137,3 +133,20 @@
         transform: rotate(50deg)
     }
 }
+
+@media (max-width: 705px) {
+    .box-title {
+        font-size: 2.9rem;
+    }
+}
+
+@media (max-width: 490px) {
+    .box-title {
+        font-size: 2.2rem;
+    }
+
+    .hot-btn, .not-btn {
+        font-size: 3rem;
+    }
+}
+
