--- a/src/pages/stats.css
+++ b/src/pages/stats.css
@@ -14,7 +14,8 @@
     flex-direction: column;
     gap: 20px;
     background-color: white;
-    width: 500px;
+    width: 80vw;
+    max-width: 500px;
     padding: 10px;
     animation: fancy 0.6s ease;
 }
