--- a/src/components/comp.css
+++ b/src/components/comp.css
@@ -96,15 +96,14 @@
 }
 
 .box-likes {
-    font-size: 1.5rem;
-    font-weight: 300;
+    font-size: 1.3rem;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.box-likes .heart {
-    font-size: 2rem;
+.heart {
+    font-size: 1.6rem;
 }
 
 .loader {
