--- a/src/components/comp.css
+++ b/src/components/comp.css
@@ -149,3 +149,27 @@
     }
 }
 
+.finished {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    color: hsl(345, 60%, 70%)
+}
+
+.finished-h1 {
+    font-size: 4rem;
+    line-height: 80px;
+}
+
+.finished-icon {
+    font-size: 8rem;
+}
+
+.finished-add {
+    margin: 30px 0px;
+    line-height: 50px;
+    text-decoration: underline;
+    font-size: 1.1rem;
+    color: inherit;
+}
