--- a/src/pages/stats.css
+++ b/src/pages/stats.css
@@ -15,6 +15,7 @@
     gap: 20px;
     background-color: white;
     width: 80vw;
+    height: 150px;
     max-width: 500px;
     padding: 10px;
     animation: fancy 0.6s ease;
